# serde-transcode-cli

./: .travis.yml  Cargo.toml  README.md
src/: args_parser.rs  args_parser_tests.rs  main.rs  transcoder.rs
tests/: integration_tests.rs
tests/assets/: test.cbor.yaml  test.json  test.json.cbor  test.json.json  test.json.toml  test.toml.cbor  test.toml.json
