[package]
name = "serde-transcode-cli"
version = "0.1.0"
authors = ["postpersonality <postpersonality@gmail.com>"]
description="Utility for file format conversion (via rust serde)"
edition = "2018"

[dependencies]
serde = "1.0"
serde-transcode = "1.1.0"
serde_json = "1.0"
serde_cbor = "0.9"
serde_yaml = "0.8"
toml = "0.5"

getopts = "0.2"
